--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
     "@schematics/angular": "^12.1.0",
+    "bootstrap": "^5.0.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.5",
-    "@angular/cli": "~12.0.5",
+    "@angular/cli": "^12.1.0",
     "@angular/compiler-cli": "~12.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
